# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1190.2.9 2010-04-19 21:20:26 dz Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2010/04/19) Fixed wrong tag "User:Role" to "Response:Attachment" in
    Responses <-> Attachments Management
 - (2010/04/12) Fixed Bug 5108 - The RSS date was not displayed correctly.
 - (2010/04/12) Fixed Bug 5112 - Redirecting to a valid screen after unsubscribing
    a ticket that is on a queue in which the agent has no permissions.
 - (2010/04/07) Fixed bug#5118 - Printing an article should indicate that
    only 1 article is printed not the whole ticket.
 - (2010/03/24) Reworked Kernel::System::Encode API to have more intuitive
    wording (is still compat. to OTRS 1.x and 2.x).

    EncodeInternalUsed() -> CharsetInternal()
    Encode()             -> EncodeInput()
    Decode()             -> Convert2CharsetInternal()
 - (2010/03/24) Fixed bug#5130 - Incorrect check for 'NoOutOfOffice' in
    GetUserData().
 - (2010/03/22) Fixed bug#5161 - Envelope-To Header gets ignored for email
    dispatching.
 - (2010/03/18) Fixed bug#5060 - Get email notification for tickets created by
    myself (new feature).
 - (2010/03/18) Updated CPAN module Text::CSV to version 1.17.
 - (2010/03/18) Updated CPAN module MailTools to version 2.06.
 - (2010/03/18) Updated CPAN module CGI to version 3.49.
 - (2010/03/18) Updated CPAN module Net::IMAP::Simple to version 1.1911.
 - (2010/03/11) Upgraded CKEditor from version 3.1 to version 3.2.
 - (2010/03/09) Fixed bug#4996 - Rich Text Editor does not display in the Customer
    Frontend in IE8.
 - (2010/03/08) Fixed bug#5085 - Wrong colours codes in Stats::Graph::dclrs.