@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1190.2.9 2010-04-19 21:20:26 dz Exp $
+# $Id: CHANGES,v 1.1190.2.10 2010-04-21 16:51:31 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -234,6 +234,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.8 (2010/??/??)
+ - (2010/04/21) Fixed bug#5266 - Ticket Zoom shows wrong html content if there
+    is no text but two html attachments in there.
  - (2010/04/15) Fixed bug#5242 - Newlines not shown in html notification mails
     on Lotus Notes
  - (2010/04/14) Fixed bug#4999 - Cache of customer user get's not refreshed after
